# brick-core

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  main.py  pyproject.toml
.github/workflows/: build.yml  deploy.yml
cloudflare/: .gitignore  README.md  package.json  wrangler.toml
cloudflare/mail-worker/: package.json  tsconfig.json  wrangler.toml
cloudflare/mail-worker/src/: index.js  index.ts
cloudflare/src/: email.js  index.js  sentry.js  signer.js  webhook.js
decorators/: auth.py  signatures.py  valid_json.py
mailers/: auth_otp_login_en.txt  auth_otp_login_pt.txt  general_not_allowed_pt.txt  not_enough_credits_en.txt  printer_failed_error_pt.txt  printer_no_attachments_pt.txt  printer_only_pdf_en.txt  printer_only_pdf_pt.txt
models/: __init__.py  print_job.py  user.py
routers/: authentication.py  printer.py  webhooks.py
tasks/: printer_daemon.py  proccess_printer_email.py
tools/: otp.py  printer.py  sessions.py  users.py
utils/: ai.py  database.py  mailer.py  notifications.py  printer.py  signatures.py  storage.py
