[project]
name = "brick-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "cryptography>=46.0.3",
    "fastapi>=0.128.0",
    "gunicorn>=23.0.0",
    "jwt>=1.4.0",
    "pycups>=2.0.4",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "sentry-sdk>=2.48.0",
    "uvicorn>=0.40.0",
]
